Fixed some issues with the welcome and code_works + brought back the the hover for the galleria

--- a/index.html
+++ b/index.html
@@ -124,85 +124,82 @@
         <b>Languages I use:</b> Python, Java, JavaScript, C#, HTML, CSS.
       </p>
       <div id="projects">
-        <div id="top">
-          <div
-            id="box"
-            onclick="openProject('https://github.com/davekolian/Manga-RSS-App')"
-            style="cursor: pointer"
-          >
-            <h4>Manga RSS App</h4>
-            <p>
-              A web application that shows newly released manga from Scanalation
-              websites. Made possible with MERN stack + Heroku + Webscraper.
-            </p>
-          </div>
-          <div
-            id="box"
-            onclick="openProject('https://github.com/davekolian/Sudoku-Solver')"
-            style="cursor: pointer"
-          >
-            <h4>Sudoku Solver</h4>
-            <p>
-              Java program that can solve Sudoku puzzles (of type 2x2, 2x3, 3x3
-              and 3x3 diagonal) with the help of the Backtracking algorithm and
-              the Constraint Satisfaction Problem.
-            </p>
-          </div>
-          <div
-            id="box"
-            onclick="openProject('https://github.com/davekolian/Server-Client-Program')"
-            style="cursor: pointer"
-          >
-            <h4>Desktop Chat App</h4>
-            <p>
-              Desktop app which enables communication between clients on the
-              localhost.
-            </p>
-          </div>
-          <div
-            id="box"
-            onclick="openProject('https://github.com/davekolian/voithos')"
-            style="cursor: pointer"
-          >
-            <h4>Voithos</h4>
-            <p>
-              Mobile application that allows the users to book an appointment
-              with their local doctors and to book for a specialized doctor
-              based on their symptoms.
-            </p>
-          </div>
+        <div
+          id="box"
+          onclick="openProject('https://github.com/davekolian/Manga-RSS-App')"
+          style="cursor: pointer"
+        >
+          <h4>Manga RSS App</h4>
+          <p>
+            A web application that shows newly released manga from Scanalation
+            websites. Made possible with MERN stack + Heroku + Webscraper.
+          </p>
         </div>
-        <div id="bottom">
-          <div
-            id="box"
-            onclick="openProject('https://github.com/davekolian/temperature-sensor-network')"
-            style="cursor: pointer"
-          >
-            <h4>Smart Home Model</h4>
-            <p>
-              Desktop app which mimics the regulation of temperature in a Smart
-              Home.
-            </p>
-          </div>
-          <div
-            id="box"
-            onclick="openProject('https://github.com/davekolian/opencv-computer-vision')"
-            style="cursor: pointer"
-          >
-            <h4>Computer Vision</h4>
-            <p>Learning how to use OpenCV to learn Computer Vision</p>
-          </div>
-          <div
-            id="box"
-            onclick="openProject('https://github.com/davekolian/pathfinding')"
-            style="cursor: pointer"
-          >
-            <h4>Pathfinding</h4>
-            <p>
-              An application where you can find the shortest path from Point A
-              to Point B in between obstacles.
-            </p>
-          </div>
+        <div
+          id="box"
+          onclick="openProject('https://github.com/davekolian/Sudoku-Solver')"
+          style="cursor: pointer"
+        >
+          <h4>Sudoku Solver</h4>
+          <p>
+            Java program that can solve Sudoku puzzles (of type 2x2, 2x3, 3x3
+            and 3x3 diagonal) with the help of the Backtracking algorithm and
+            the Constraint Satisfaction Problem.
+          </p>
+        </div>
+        <div
+          id="box"
+          onclick="openProject('https://github.com/davekolian/Server-Client-Program')"
+          style="cursor: pointer"
+        >
+          <h4>Desktop Chat App</h4>
+          <p>
+            Desktop app which enables communication between clients on the
+            localhost.
+          </p>
+        </div>
+        <div
+          id="box"
+          onclick="openProject('https://github.com/davekolian/voithos')"
+          style="cursor: pointer"
+        >
+          <h4>Voithos</h4>
+          <p>
+            Mobile application that allows the users to book an appointment with
+            their local doctors and to book for a specialized doctor based on
+            their symptoms.
+          </p>
+        </div>
+
+        <div
+          id="box"
+          onclick="openProject('https://github.com/davekolian/temperature-sensor-network')"
+          style="cursor: pointer"
+        >
+          <h4>Smart Home Model</h4>
+          <p>
+            Desktop app which mimics the regulation of temperature in a Smart
+            Home.
+          </p>
+        </div>
+        <div
+          id="box"
+          onclick="openProject('https://github.com/davekolian/opencv-computer-vision')"
+          style="cursor: pointer"
+        >
+          <h4>Computer Vision</h4>
+          <p>Learning how to use OpenCV to learn Computer Vision</p>
+        </div>
+        <div
+          id="box"
+          onclick="openProject('https://github.com/davekolian/pathfinding')"
+          style="cursor: pointer"
+        >
+          <h4>Pathfinding</h4>
+          <p>
+            An application where you can find the shortest path from Point A to
+            Point B in between obstacles.
+          </p>
         </div>
       </div>
     </div>
