--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@
       <div id="about_me">
         <h2>About Me</h2>
         <p>
-          Hello! My name is Dave Kol, a recent graduate of BSc. in Computer
-          Science Engineering. I am currently in Debrecen, Hungary. I am a
+          Hello! My name is Dave Kol, a current student of MSc. in Artificial
+          Intelligence. I am currently in Leuven, Belgium. I am a
           creative and enthusiastic <b>software developer</b> and
           <b>graphic designer</b>. I have a <b>HUGE</b> passion for Artificial
           Intelligence and Data Science.
